# Raiju

./: .gitignore  CMakeLists.txt  README.md  TODO.md  output.txt
src/: AbstractValue.h  BoolValue.h  Bound.h  Constraint.cpp  Constraint.h  Graph.cpp  Graph.h  IntValue.h  Solver.cpp  Solver.h  main.cpp
tests/: test_abstract_value.cpp  test_bool_value.cpp  test_constraints.cpp  test_int_value.cpp  test_solver.cpp
